{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 353,
  "lineage": "d00507dd-4cb7-07bd-4a04-b6b666e1d701",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-06cb58f0402dd6b15",
            "default_route_table_id": "rtb-06cb58f0402dd6b15",
            "id": "rtb-06cb58f0402dd6b15",
            "owner_id": "939735320461",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-vpc-default-route"
            },
            "tags_all": {
              "Name": "test-vpc-default-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-037691bce20502608",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-037691bce20502608",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc-default-sg"
            },
            "tags_all": {
              "Name": "test-vpc-default-sg"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006cf82a1f7a287e1",
            "domain": "vpc",
            "id": "eipalloc-006cf82a1f7a287e1",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-6-229.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.6.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb60994bcb22cc2c",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-0fe266ed09008d478",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe266ed09008d478",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hello-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e6789654ccb0c78",
            "private_dns": "ip-10-0-0-240.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.240",
            "public_ip": "3.36.116.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01db99b9e37aea53d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fa21f26691d759c",
            "tags": {
              "Name": "HelloWorld"
            },
            "tags_all": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0529f90395ee25a57"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0745777c869ea40b1",
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:instance/i-092f63b831e957837",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092f63b831e957837",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hello-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056c710ad0cc4f5f8",
            "private_dns": "ip-10-0-0-77.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.77",
            "public_ip": "43.202.37.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069ed7f06f802ac59",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fa21f26691d759c",
            "tags": {
              "Name": "again"
            },
            "tags_all": {
              "Name": "again"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0529f90395ee25a57"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ami_from_instance.ami",
            "aws_instance.web",
            "aws_key_pair.deployer",
            "aws_security_group.instance-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test",
            "data.aws_ami.amzn2",
            "null_resource.wait_for_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:internet-gateway/igw-05ecaea8166c88eef",
            "id": "igw-05ecaea8166c88eef",
            "owner_id": "939735320461",
            "tags": {
              "Name": "test-vpc-igw"
            },
            "tags_all": {
              "Name": "test-vpc-igw"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006cf82a1f7a287e1",
            "association_id": "eipassoc-0386321856b5cbe24",
            "connectivity_type": "public",
            "id": "nat-0f4a2a8239e61ce0b",
            "network_interface_id": "eni-07f5d4443b164b1e2",
            "private_ip": "10.0.0.152",
            "public_ip": "3.36.6.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00fa21f26691d759c",
            "tags": {
              "Name": "test-vpc-ngw"
            },
            "tags_all": {
              "Name": "test-vpc-ngw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0a986ae7e70fcd59c",
            "id": "rtb-0a986ae7e70fcd59c",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f4a2a8239e61ce0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-route-pri"
            },
            "tags_all": {
              "Name": "test-vpc-route-pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-02650cc90b9daac17",
            "id": "rtb-02650cc90b9daac17",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ecaea8166c88eef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-route-pub"
            },
            "tags_all": {
              "Name": "test-vpc-route-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e52767e2a67f3ced",
            "route_table_id": "rtb-0a986ae7e70fcd59c",
            "subnet_id": "subnet-09f5de53f3947ca68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4159157fb6e17d6",
            "route_table_id": "rtb-0a986ae7e70fcd59c",
            "subnet_id": "subnet-0dd4917e836c88fac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a63d4658a8d83f46",
            "route_table_id": "rtb-0a986ae7e70fcd59c",
            "subnet_id": "subnet-04fd32237c85f7250"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea47d46d91120263",
            "route_table_id": "rtb-0a986ae7e70fcd59c",
            "subnet_id": "subnet-06016604dea33eebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0982c62be4b9d1c1d",
            "route_table_id": "rtb-02650cc90b9daac17",
            "subnet_id": "subnet-00fa21f26691d759c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ecf9501c1b85c8a",
            "route_table_id": "rtb-02650cc90b9daac17",
            "subnet_id": "subnet-008846753bcbe348e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c050e18c2706a5c1",
            "route_table_id": "rtb-02650cc90b9daac17",
            "subnet_id": "subnet-09549960a33ad28bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0116f362e49852e2f",
            "route_table_id": "rtb-02650cc90b9daac17",
            "subnet_id": "subnet-05f5b04827b7e2f22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-0529f90395ee25a57",
            "description": "security group for instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0529f90395ee25a57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-sg"
            },
            "tags_all": {
              "Name": "instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-09f5de53f3947ca68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f5de53f3947ca68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0dd4917e836c88fac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd4917e836c88fac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-04fd32237c85f7250",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd32237c85f7250",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-06016604dea33eebc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06016604dea33eebc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-4"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-4"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-00fa21f26691d759c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fa21f26691d759c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-008846753bcbe348e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008846753bcbe348e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-09549960a33ad28bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09549960a33ad28bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-05f5b04827b7e2f22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f5b04827b7e2f22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-4"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-4"
            },
            "vpc_id": "vpc-07ee93d921833edca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:vpc/vpc-07ee93d921833edca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0201ba1c42239af13",
            "default_route_table_id": "rtb-06cb58f0402dd6b15",
            "default_security_group_id": "sg-037691bce20502608",
            "dhcp_options_id": "dopt-0946a0de0cb1bcec9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ee93d921833edca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cb58f0402dd6b15",
            "owner_id": "939735320461",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}